# ungal-ai

./: .gitignore  Makefile  docker-compose.yml
ai/sop/: frontend_setup.md  improvement.md  overview.md  schema.md  setup.md
backend/ungal-ai/: Cargo.toml  Dockerfile
backend/ungal-ai/migrations/: 20240925104453_create_ai_models_table.sql  20240925104453_create_conversations_table.sql  20240925104453_create_messages_table.sql  20240925104453_create_users_table.sql
backend/ungal-ai/src/: main.rs  models.rs
