[package]
name = "ungal-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = "1.4"
tower = "0.5"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.10"
bcrypt = "0.15"
argon2 = "0.5"
