[package]
name = "ungal-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = "1.4"
tower = "0.5"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
bcrypt = "0.15"
argon2 = "0.5"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
